--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
     <p>Luckily you have such a good intuition that every time you make a guess, you will know if the actual code is higher or lower. </p>
     </main>
     <section>
-    <div id="clock"><p>You have <strong>7</strong> more tries</p></div>
+    <div id="clock"><p>You have <strong id="left">7</strong> more tries</p></div>
     
     <h2>Select the Numbers Below to Fill in the Code!</h2>
     <div id = "lock"><button id = "one">1</button><button id = "two">2</button><button id = "three">3</button></div>
-    <p id = "guesses">Attempts: </p>
+    
     <div class = numb>
     <p id = "combination"></p>
-   
+   <button id="clear">Clear Attempt</button>
     </div>
+    <h3>Attempts:</h3>
+    <p id = "guesses"></p>
     </section>
 </div>
 </body>
