--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
     <h1>The Codebreaker!</h1>
     <p>Crack the three-digit code before you hit zero more tries!</p>
-    <p>Luckily you have such a good intuition that every time you make a guess, you will know if the actual code is higher or lower. </p>
+    <p>Luckily you have such a good intuition that every time you make a guess, you will know if the actual code is higher or lower. Just check the attempts down below! </p>
     </main>
     <section>
     <div id="clock"><p>You have <strong id="left">7</strong> more tries</p></div>
